update: navbar component

--- a/apps/client/src/assets/styles/_variables.scss
+++ b/apps/client/src/assets/styles/_variables.scss
@@ -1,13 +1,14 @@
 // 🎨 Colores base
-$color-rojo:        #E24137;
+$primary-color:        #E24137;
 $color-rojo-claro:  #F68C65;
-$color-durazno:     #F6D0A1;
+$secondary-color:     #F6D0A1;
 $color-turquesa:    #29B9B9;
 $color-turquesa-oscuro: #168090;
 
 // 🌚 Tonos neutros
 $color-fondo:       #f9f9f9;
-$color-texto:       #333;
+$text-color:       #333;
 
 // 🔤 Tipografías
-$fuente-base: 'Segoe UI', sans-serif;
+$font-main: 'Inter', 'Segoe UI', sans-serif;
+$border-radius: 6px;
